Adjust DCHECK to avoid rounding corner-case issues.

Bug: 810572
Change-Id: Ib1958e89bb3d9c9cf8ba61f3fdffee3ef995d8d7
Reviewed-on: https://chromium-review.googlesource.com/910116
Reviewed-by: vmpstr <vmpstr@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535606}
Former-commit-id: ade7041fc934d855bcbdc3a4d5bd9adb199def7c